crates/plotnik-lib/tests/04-emit/linking/unknown_field_with_suggestion.txt
Q = (function_declaration
    nme: (identifier) @name) @fn
==== diagnostics ====
error: `nme` is not a valid field
 --> query.ptk:2:5
  |
2 |     nme: (identifier) @name) @fn
  |     ^^^
  |
help: did you mean `name`?
  |
2 |     name: (identifier) @name) @fn
  |      +
